# dkb-fetcher

./: .gitignore  main.py  pyproject.toml  start.command
icon/: create-icns.sh  dkb-fetcher.icns  icon.afdesign
